Fix cumulative displacement, adjust charts, update alerts status UI

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="app">
       <!-- SIDEBAR -->
       <div class="sidebar">
-        <h2>PIPELINE EWMS</h2>
+        <h2>MFO PIPELINE EWMS</h2>
 
         <div class="sidebar-menu">
           <div class="menu-item active" data-view="pipeline">Pipeline View</div>
